[package]
name = "graph_annealing"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

[dependencies]
petgraph = "0.2.0"
rand = "0.3"
nalgebra = "0.4.0"
clap = "1.5.0"
crossbeam = "0.1.0"
simple_parallel = "0.3.0"
num_cpus = "0.2"
time = "0.1"

serde = "0.6.0"
serde_json = "0.6.0"
serde_macros = "0.6.0"

sexp = "1.1"

#graph-neighbor-matching = {git = "https://github.com/mneumann/graph-neighbor-matching.git"}
graph-neighbor-matching = "0.2.1"

#triadic-census = { git = "https://github.com/mneumann/triadic-census-rs.git" }
triadic-census = "0.1.0"

closed01 = "0.0.1"

#graph-edge-evolution = { git = "https://github.com/mneumann/graph-edge-evolution.git" }
graph-edge-evolution = "0.1.0"

pcg = { git = "https://github.com/codahale/pcg.git" }
graph-layout = { git = "https://github.com/mneumann/graph-layout-rs.git" }
evo = { git = "https://github.com/mneumann/evo-rs.git" }
graph-sgf = { git = "https://github.com/mneumann/graph-sgf.git" }
lindenmayer-system = { git = "https://github.com/mneumann/lindenmayer-system.git" }
