[package]
name = "graph_annealing"
version = "0.1.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]

[dependencies]
petgraph = "0.2.0"
rand = "0.3"
nalgebra = "0.4.0"

#graph-neighbor-matching = {git = "https://github.com/mneumann/graph-neighbor-matching.git"}
graph-neighbor-matching = "0.3.2"

nsga2 = {git = "https://github.com/mneumann/nsga2-rs"}

#triadic-census = { git = "https://github.com/mneumann/triadic-census-rs.git" }
triadic-census = "0.2.0"

closed01 = "0.3.0"

graph-edge-evolution = { git = "https://github.com/mneumann/graph-edge-evolution.git" }
#graph-edge-evolution = "0.1.0"

asexp = "0.2.0"

lindenmayer-system = "0.3.0"

expression = "0.3.0"
expression-num = "0.2.0"

#expression-closed01 = "0.1.0"
expression-closed01 = { git = "https://github.com/mneumann/expression-closed01-rs.git" }

pcg = { git = "https://github.com/codahale/pcg.git" }
evo = { git = "https://github.com/mneumann/evo-rs.git" }
graph-layout = { git = "https://github.com/mneumann/graph-layout-rs.git" }

matplotlib = { git = "https://github.com/mneumann/matplotlib-rs.git" }

graph-io-gml = "0.0.2"

artificial-genome = {git = "https://github.com/mneumann/artificial-genome-rs"}

[features]

default = ["expr_closed01"]
expr_num = []
expr_closed01 = []
